--- a/index.html
+++ b/index.html
@@ -155,10 +155,12 @@
                             </div>
                         </div>
                         <div class="row">
-                            <label for="" class="col-form-label">LISTA: </label>
                             <div class="col-lg-12">
-                                <ul class="list-group" id="listaCarrerasAdd">
-                                    <!--  lista de carreras  -->
+                                <label for="" class="col-form-label">LISTA: </label>
+                                <table class="table">
+                                    <tbody id="listaCarrerasAdd">     <!-- la tabla que tiene la lista de carreras que se moestraran -->
+                                    </tbody>
+                                </table>
                                 </ul>
                             </div>
                         </div>
@@ -203,12 +205,12 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <label for="" class="col-form-label">LISTA: </label>
                                 <div class="col-lg-12">
-                                    <ul class="list-group" id="listaDocumentosAdd">
-                                        <!--  lista de documentosP  -->
-
-                                    </ul>
+                                    <label for="" class="col-form-label">LISTA: </label>
+                                    <table class="table">
+                                        <tbody id="listaDocumentosAdd">  <!-- la tabla que tiene la lista de documentos que se moestraran -->
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
 
