--- a/botones.html
+++ b/botones.html
@@ -1,1 +1,20 @@
-<button type='button' class='btn btn-secondary' data-bs-toggle='popover' data-bs-placement='bottom' title='Documentos'data-bs-content='Lista de Documentos'>DOCUMENTOS</button>
+<button type='button' class='btn btn-secondary' data-bs-toggle='popover' data-bs-placement='bottom' title='Documentos'
+    data-bs-content='Lista de Documentos'>DOCUMENTOS</button>
+
+
+<div class='wrapper text-center'><button class='btn btn-danger btn-sm btnBorrar' data-toggle='tooltip'
+        title='Eliminar'><span class='material-icons'>Eliminar</span></button></div>
+
+<td>
+    <div class='wrapper text-center'>
+        <button class='btn btn-danger btn-sm btnBorrarCarreraAlumno' data-toggle='tooltip' title='Eliminar'>
+            <span class='material-icons'>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-trash-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
+                </svg>
+            </span>
+        </button>
+    </div>
+</td>
